Fixed overlaping titles.

--- a/css/splash.less
+++ b/css/splash.less
@@ -1,3 +1,5 @@
+@max_two_columns: 650px;
+
 section.splash-screen {
     @two_third_vh: 100vh * 2 / 3;
     @third_vh: 100vh / 3;
@@ -105,7 +107,7 @@ section.splash-screen {
                     }
                 }
                 .left {
-                    @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { width: 100%; }
+                    @media screen and (max-width: @max_two_columns) { width: 100%; }
                     .column(6);
                     h1 {
                         a {
@@ -124,7 +126,7 @@ section.splash-screen {
                 }
                 .right {
                     .column(6);
-                    @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { width: 100%; }
+                    @media screen and (max-width: @max_two_columns) { width: 100%; }
                     h2 {
                         font-size: 1.5em;
                         color: #FFF;                        
